2005-09-04  Derek Price  <derek@ximbiot.com>

	* main.c (main), server.c (serve_root, switch_to_user): Replace putenv
	with GNULIB setenv.
	* sanity.config.sh.in (HAVE_PUTENV): Remove.
	* sanity.sh (env): Remove reference to $HAVE_PUTENV.

	* sanity.sh (tests): Add config2 & config3.

	* server.c (isSamePath, isThisHost): Move to...
	* subr.c (isSamePath, isThisHost): ...here.
	* subr.h (isSamePath, isThisHost): Add protos.
	* parseinfo.c (parse_config): Handle [rootspec] syntax.
	* main.c (main): Always set server_hostname.
	* sanity.sh (config3): New tests for same.

	* server.c (gserver_authenticate_connection): Output hostname in
	error message.

	* server.c (isThisHost): Fix typo.

	* server.c (isThisHost, gserver_authenticate_connection): Simplify
	using canon_host().

	* root.c (free_cvsroot_t): Update header comment.

	* root.c (new_cvsroot_t): directory is not client-specific.
	(free_cvsroot_t): Declare static.
	* root.h (free_cvsroot_t): Remove proto.
	* server.c (server_init): Don't free cvsroot_t when finished with it.

2005-09-03  Derek Price  <derek@ximbiot.com>

	* root.h (cvsroot_t->isremote): Update comment.

	* history.c (read_hrecs_file): Suppress signed/unsigned char warning.

	* root.h (cvsroot_t->isremote): Declare bool.
	* root.c (new_cvsroot_t): Initialize isremote to false instead of 0.

	* add.c (add_usage): Standardize usage message somewhat.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* parseinfo.c (parse_config): Variable declarations must precede